syntax = "proto3";

option go_package = "./user/pb";

service UserService {
    rpc Authenticate(UserAuthRequest) returns (UserAuthResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message UserAuthRequest {
    string username = 1;
    string password = 2;
}

message UserAuthResponse {
    string message = 1;
}

message CreateUserRequest {
    string name = 1;
    string password = 2;
    string age = 3;
    string additional_information = 4;
    repeated string parent = 5;
}

message CreateUserResponse {
    string id =1;
    string name = 2;
    string age = 3;
    string additional_information = 4;
    repeated string parent = 5;
}

message UpdateUserRequest {
    string id =1;
    string name = 2;
    string age = 3;
    string additional_information = 4;
    repeated string parent = 5;
}

message UpdateUserResponse {
    string id = 1;
    string name = 2;
    string age = 3;
    string additional_information = 4;
    repeated string parent = 5;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string age = 3;
    string additional_information = 4;
    repeated string parent = 5;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}